# tinysoar

./: .cvsignore  .gdbinit  ChangeLog  Makefile  Makefile.in  NOTES  README  README.md  TODO  agent.c  agent.inc  alloc.c  alloc.h  chunk.c  config.h  configure  configure.in  debug.c  defs.h.in  export.c  h8300.lds  ht.c  ht.h  lego-sim.c  legosoar.c  line-tracker.soar  makefile.win  parser-test.c  parser.h  pkgIndex.tcl  pool.c  pool.h  pref.c  prod.c  rcx.c  rcx.h  rete-test.c  rete.c  rete.h  rule.l  (+12 more)
tests/: basic-otie-chunk.soar  bumper.soar  chunk-1.soar  chunk-10.soar  chunk-11.soar  chunk-12.soar  chunk-13.soar  chunk-14.soar  chunk-15.soar  chunk-16.soar  chunk-17.soar  chunk-2.soar  chunk-3.soar  chunk-4.soar  chunk-5.soar  chunk-6.soar  chunk-7.soar  chunk-8.soar  chunk-9.soar  disjunct.soar  drive.soar  flip-flop.soar  line-tracker.soar  ops-1.soar  ops-10.soar  ops-11.soar  ops-12.soar  ops-13.soar  ops-14.soar  ops-15.soar  ops-16.soar  ops-17.soar  ops-18.soar  ops-19.soar  ops-2.soar  ops-20.soar  ops-21.soar  ops-3.soar  ops-4.soar  ops-5.soar  (+23 more)
tests/eight-puzzle/: eight-puzzle.soar  evaluate.soar  slide-tile.soar
